@@ -23,7 +23,7 @@ public class DbWT0002KokuhorenTorikomiErrorTempProcess extends BatchProcessBase<
     private static final RString MYBATIS_SELECT_ID = new RString(
             "jp.co.ndensan.reams.db.dbc.persistence.db.mapper.relate.dbc120230."
             + "ISeikyugakuTsuchishoCsvFileMapper.select請求額通知書一時TBL件数");
-    private static final Integer NUM_0 = new Integer(0);
+    private static final Integer NUM_0 = Integer.valueOf(0);
 
     private static final RString エラー区分_登録対象なし = new RString("99");
     private static final RString 処理結果リスト一時_TABLE_NAME = new RString("DbWT0002KokuhorenTorikomiError");
